--- a/image_reset.css
+++ b/image_reset.css
@@ -1,1 +1,11 @@
+img {
+  font-style: italic;
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  background-size: cover;
+  shape-margin: 1rem;
+  display: block;
 
+}
